# HQ

./: .gitignore  .gitmodules  README.md  README.zh.md
AgoraHQ-Android/: AndroidManifest.xml  README.cn.md  README.en.md  README.md  README.zh.md  resources.arsc  settings.gradle
AgoraHQ-Broadcaster-Windows/: AgoraHQ.sln  LICENSE  README.en.md  README.md  README.zh.md  Restart.bat
AgoraHQ-Server-Nodejs/: README.en.md  deploy.sh  package-lock.json  package.json  readme.md  server.js
AgoraHQ-Windows/: HQConfig.ini  README.en.md  README.md
AgoraHQ-iOS-Swift/: .gitignore  Podfile  README.en.md  README.md  README.zh.md
HQ-Server-Nodejs/: .gitignore  deploy_cn.sh  deploy_en.sh  ecosystem.config.js  package-lock.json  package.json  readme.md  server.js
obs-studio-for-HQ-Windows/: README.md
obs-studio-for-HQ-Windows/plugins/win-agora/: CMakeLists.txt
obs-studio-for-HQ-Windows/plugins/win-agora/Agora/: CicleBuffer.hpp  ExtendAudioFrameObserver.hpp
server/: package-lock.json
wiki/: Agora-Account-and-App-ID.md  Agora-Game-Show-Client-SDK-Integration-for-Android-(Audience-member).md  Agora-Game-Show-Client-SDK-Integration-for-iOS-(Audience-member).md  Game-Play-Instructions-(Audience-Member).md  Game-Play-Instructions-(Host).md  Hardware-and-Software-Requirements.md  Home.md  Install-OBS-Studio.md  Install-VirtualCam-for-OBS-Studio.md  agoraAppId.md  broadcasterSdkIntegration.md.md  clientSdkIntegrationIos-old.md  clientSdkIntegrationIos.md.md  index.md  installObsStudio.md  instructionsHost.md  instructionsHost.md.md  instructionsPlayer.md  instructionsPlayer.md.md
(+430 files in other folders)
